# custom_core_vision

./: .pre-commit-config.yaml  .pypirc  404.html  Dockerfile  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yaml  main.yml  pre-commit.yaml
core_vision/: __init__.py  classification_model.py  segmentation_model.py
core_vision/heads/: all_mlp.py  classification_head.py  fpn.py  jpu.py  ksac.py  ocnet.py
core_vision/layers/: aspp.py  classification_layer.py  common_layers.py  feature_pyramids.py  joint_pyramid_upsampling.py  object_context.py
core_vision/models/: convmlp.py  convnext.py  dilated_resnet.py  fpn.py  ghostnet.py  jpu.py  ksac.py  mit.py  mobilenetv2.py  mobilevit.py  ocnet.py  resnet18.py  utils.py  vovnet.py
docs/models/: vovnet.md
models/vovnet/: index.html
search/: search_index.json
tests/: test_aspp.py  test_classification_layer.py  test_classification_model.py  test_common_layers.py  test_convnext.py  test_fpn.py  test_jpu.py  test_ksac.py  test_resnet18.py  utils.py
tests/tests_heads/: test_all_mlp.py  test_classification_head.py  test_fpn.py  test_jpu.py  test_ksac.py
tests/tests_layers/: test_aspp.py  test_common_layers.py  test_feature_pyramids.py  test_joint_pyramid_upsampling.py  test_object_context.py  test_shared_kernels.py
tests/tests_models/: test_convmlp.py  test_convnext.py  test_ghostnet.py  test_mit.py  test_resnet18.py  (+1 more)
(+6 files in other folders)
