[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "core_vision"
authors = [{name = "Mathieu Klimczak", email = "klimczak.mathieu@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
description = "Implementing CNNs from articles"
requires-python = ">=3.8"
dependencies = [
    "einops~=0.4.1",
    "loguru~=0.6.0",
    "tensorflow~=2.7",
    "tensorflow-addons~=0.17.1",
]


[project.optional-dependencies]
dev=[
    "bandit~=1.7.4",
    "black~=22.6.0",
    "darglint~=1.8.1",
    "flake8~=4.0.1",
    "isort~=5.10.1",
    "mypy~=0.961",
    "pipreqs~=0.4.11",
    "pre-commit~=2.20.0",
    "radon~=5.1.0",
    "rope~=1.2.0",
    "wemake-python-styleguide~=0.16.1",
    "flit~=3.7.1",
]

test = [
    "bandit~=1.7.4",
    "hypothesis~=6.49.1",
    "pytest~=7.1.2",
    "pytest-cov~=3.0.0",
    "pytest-github-actions-annotate-failures~=0.1.7",
    "pytest-xdist~=2.5.0",
    "safety~=2.0.0",
    "tox~=3.25.1",
]

doc = [
    "mike~=1.1.2",
    "mkdocs~=1.3.0",
    "mkdocs-material~=9.0.9",
    "mkdocstrings~=0.19.0",
    "mkdocstrings-python~=0.7.1",
]

[project.urls]
Home = "https://github.com/Klimorg/custom_core_vision"
